--- a/deals-grid/src/styles.scss
+++ b/deals-grid/src/styles.scss
@@ -1,74 +1,28 @@
 // Variables
-$primary-color: #0056b3;
-$background-color: #f9f9f9;
-$selected-row-color: #f0f8ff;
-$table-border-color: #ddd;
-$link-color: #646cff;
-$link-hover-color: darken($link-color, 10%);
-$dark-background-color: #242424;
-$light-text-color: rgba(255, 255, 255, 0.87);
-$light-background-color: #ffffff;
+$primary-color: blue;
+$background-color: darkblue;
+$table-color: lighten(darkblue, 5%);
+$hover-color: lighten(blue, 5%);
+$text-color: rgba(255, 255, 255);
 $focus-color: -webkit-focus-ring-color;
-
-// Mixin for button styles
-@mixin button-styles($bg-color, $hover-color) {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  cursor: pointer;
-  background-color: $bg-color;
-  transition: border-color 0.25s;
-
-  &:hover {
-    border-color: $hover-color;
-  }
-
-  &:focus,
-  &:focus-visible {
-    outline: 4px auto $focus-color;
-  }
-}
-
-// Mixin for link styles
-@mixin link-styles($color, $hover-color) {
-  font-weight: 500;
-  color: $color;
-  text-decoration: inherit;
-
-  &:hover {
-    color: $hover-color;
-  }
-}
-
-// Mixin for flexbox row layout
-@mixin flex-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
 
 // Root styles with mixins
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
-  color: $light-text-color;
-  background-color: $dark-background-color;
-}
-
-// Anchor link styles with mixin
-a {
-  @include link-styles($link-color, $link-hover-color);
+  color-scheme: dark;
+  color: $text-color;
+  background-color: $background-color;
 }
 
 // Body styles using flex-row mixin
 body {
   margin: 0;
-  @include flex-row;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -81,12 +35,17 @@ h1 {
 
 // Button styles with mixin
 button {
-  @include button-styles(#1a1a1a, $link-color);
-}
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  cursor: pointer;
+  transition: border-color 0.25s;
 
-// Card styles
-.card {
-  padding: 2em;
+  &:hover {
+    border-color: $hover-color;
+  }
 }
 
 // App container styles
@@ -95,20 +54,4 @@ button {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-// Light theme preference
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: $light-background-color;
-  }
-
-  a:hover {
-    color: lighten($link-hover-color, 10%);
-  }
-
-  button {
-    background-color: $background-color;
-  }
 }
