--- a/deals-grid/src/styles.scss
+++ b/deals-grid/src/styles.scss
@@ -19,37 +19,35 @@ $focus-color: -webkit-focus-ring-color;
   background-color: $background-color;
 }
 
-// App container styles
 #app {
-  max-width: 1280px;
+  max-width: 100rem;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-// Body styles using flex-row mixin
 body {
   margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  min-width: 320px;
+  min-width: 20rem; 
   min-height: 100vh;
 }
 
 // Heading styles
 h1 {
-  font-size: 3.2em;
+  font-size: 3rem;
   line-height: 1.1;
 }
 
 // Button styles with mixin
 button {
-  border-radius: 8px;
+  border-radius: 1rem;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -58,5 +56,3 @@ button {
     border-color: $button-hover-color;
   }
 }
-
-
